--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "framer-motion": "^12.23.26",
     "lucide-react": "^0.562.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-helmet-async": "^2.0.5",
+    "react-router-dom": "^6.28.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4.1.18",
@@ -24,6 +26,3 @@
     "vite": "^5.0.0"
   }
 }
-
-
-
