--- a/vercel.json
+++ b/vercel.json
@@ -4,7 +4,7 @@
     "framework": "vite",
     "rewrites": [
         {
-            "source": "/((?!api|_next|sitemap.xml|robots.txt|.*\\..*).*)",
+            "source": "/((?!api|_next|sitemap\\.xml|robots\\.txt|strategy-review\\.html|.*\\..*).*)",
             "destination": "/index.html"
         }
     ],
